--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -4,8 +4,9 @@
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
+  padding: 0 30px 0 30px;
   font-size: 15px;
+  font:inherit;
   background-color: black;
   color: white;
   text-transform: uppercase;
@@ -15,6 +16,7 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   &:hover {
     background-color: white;
